# panel-hermes-plugin

./: .gitignore  CHANGELOG.md  LICENSE  README.md  plugin.yaml  pyproject.toml
panel_hermes_plugin/: __init__.py  _config.py  _hooks.py  _ingest.py  _sampler.py
tests/: test_config.py  test_hooks.py  test_ingest.py  test_sampler.py
